--- a/src/MovieList.css
+++ b/src/MovieList.css
@@ -45,3 +45,36 @@
       background-position: 200% center;
     }
   }
+
+  .emptyText {
+    font-family: shopifyMockFont;
+    line-height: normal;
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: center !important;
+    margin-top: 0.05em;
+    margin-bottom: -0.1em;
+    font-size: 20em;
+    color: rgba(0, 0, 0, 0.582);
+  }
+
+  @media only screen and (max-width: 1220px) {
+    .emptyText {
+        font-size: 15em;
+        margin-top: 0.2em;
+    }
+  }
+
+  @media only screen and (max-width: 960px) {
+    .emptyText {
+        font-size: 11em;
+        margin-top: 0.5em;
+    }
+  }
+
+  @media only screen and (max-width: 750px) {
+    .emptyText {
+        font-size: 8em;
+        margin-top: 0.8em;
+    }
+  }
